# bobiki

./: .gitignore  LICENSE  README.md  pyproject.toml
bobiki/: main.py
bobiki/assets/music/: explore.m4a
